--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "font-awesome": "^4.7.0",
@@ -30,6 +31,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
