--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5"
