--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.15",
     "font-awesome": "^4.7.0",
     "jodit-react": "^5.2.19",
     "js-cookie": "^3.0.5",
