--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "font-awesome": "^4.7.0",
     "jodit-react": "^5.2.19",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
     "next": "^15.5.7",
@@ -54,6 +55,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
+    "world-countries": "^5.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
